--- a/sass/components/_googlemaps.scss
+++ b/sass/components/_googlemaps.scss
@@ -1,10 +1,14 @@
 .acf-map {
-    width: 100%;
-    height: 400px;
+    width: 600px;
+    height: 600px;
     border: #ccc solid 1px;
     margin: 20px 0;
-   }
-   // Fixes potential theme css conflict.
-   .acf-map img {
+}
+// Fixes potential theme css conflict.
+.acf-map img {
     max-width: inherit !important;
-   }
+}
+
+img {
+    max-width: 25rem;
+}
