variables + components setup

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -18,3 +18,9 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+$bg-color: #fbf7ee;
+$text-color: #545454;
+$yellow: #FFD399;
+$coral: #F1876B;
+$blue: #BED0D3;
