--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -5,3 +5,9 @@ $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee&family=Roboto&display=swap');
+
+$bungee: 'Bungee', cursive;
+$abril: 'Abril Fatface', cursive;
+$roboto: 'Roboto', sans-serif;
