--- a/sass/style.scss
+++ b/sass/style.scss
@@ -81,6 +81,13 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 @import "components/components";
 @import "components/googlemaps";
+@import "components/main";
+@import "components/about";
+@import "components/catering";
+@import "components/front-page";
+@import "components/job";
+@import "components/location";
+@import "components/menu";
 
 /*--------------------------------------------------------------
 # Plugins
