Applied @mixin page_grid_layout to page components

--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -33,7 +33,7 @@ article#post-78 {
         }
 
         section.join-us-info-container {
-            section.join-is-info {
+            section.join-us-info {
                 @include page-grid-layout;
             }
         }
