--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -3,10 +3,60 @@
 article#post-78 {
 
     section.company-info-container {
-        background-color: $yellow;
         section.company-info {
+            p {
+                text-align: left;
+            }
+        }
+    }
+    section.founder-info-container {
+        
+        section.founder-info {
+            padding-top: 2rem;
+
+            h3 {
+                margin-bottom: 0;
+            }
+
             img {
-                max-height: 20rem;
+                width: 13rem;
+                height: 13rem;
+                object-fit: cover;
+                border-radius: 50% 50%;
+            }
+        }
+    }
+
+    section.locations-info-container {
+        background-color: $yellow;
+
+        section.locations-info {
+            padding-bottom: 2rem;
+            a.button {
+                text-decoration: none;
+                padding: .75rem 1rem;
+                background-color: $bg-color;
+                border: $text-color solid 2px;
+                border-radius: 50px 50px;
+                color: $text-color;
+            }
+        }
+    }
+
+    section.join-us-info-container {
+
+        section.join-us-info {
+            p {
+                text-align: left;
+            }
+
+            a.button {
+                text-decoration: none;
+                padding: .75rem 1rem;
+                background-color: $bg-color;
+                border: $text-color solid 2px;
+                border-radius: 50px 50px;
+                color: $text-color;
             }
         }
     }
@@ -16,25 +66,41 @@ article#post-78 {
 @media (min-width: 60rem) {
     article#post-78{
         section.company-info-container {
-            section.company-info{
-                @include page-grid-layout;
+            @include page-grid-layout;
+            section.company-info{   
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                p {
+                    padding: 0 0 0 2rem;
+                }
             }
         }
         section.founder-info-container {
+            @include page-grid-layout;
             section.founder-info {
-                @include page-grid-layout;
+
             }
         }
 
         section.locations-info-container {
+            @include page-grid-layout;
             section.locations-info {
-                @include page-grid-layout;
+               
             }
         }
 
         section.join-us-info-container {
+            @include page-grid-layout;
             section.join-us-info {
-                @include page-grid-layout;
+               display: flex;
+               align-items: center;
+               justify-content: space-between;
+
+                div.join-us-content {
+                    padding: 0 2rem 0 0;
+                }
             }
         }
     }
