--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -10,10 +10,9 @@ article#post-78 {
         }
     }
     section.founder-info-container {
-        
+        background-color: $yellow;
+        padding: 4rem 0 2rem 0;
         section.founder-info {
-            padding-top: 2rem;
-
             h3 {
                 margin-bottom: 0;
             }
@@ -23,15 +22,15 @@ article#post-78 {
                 height: 13rem;
                 object-fit: cover;
                 border-radius: 50% 50%;
+                border: $yellow solid 5px;
             }
         }
     }
 
     section.locations-info-container {
-        background-color: $yellow;
 
         section.locations-info {
-            padding-bottom: 2rem;
+            padding-bottom: 3rem;
             a.button {
                 text-decoration: none;
                 padding: .75rem 1rem;
@@ -46,10 +45,7 @@ article#post-78 {
     section.join-us-info-container {
 
         section.join-us-info {
-            p {
-                text-align: left;
-            }
-
+            padding-bottom: 3rem;
             a.button {
                 text-decoration: none;
                 padding: .75rem 1rem;
@@ -72,15 +68,15 @@ article#post-78 {
                 align-items: center;
                 justify-content: space-between;
 
-                p {
-                    padding: 0 0 0 2rem;
+                p{
+                    padding-right: 2rem;
                 }
             }
         }
         section.founder-info-container {
             @include page-grid-layout;
             section.founder-info {
-
+                padding: 0 2rem;
             }
         }
 
@@ -99,7 +95,7 @@ article#post-78 {
                justify-content: space-between;
 
                 div.join-us-content {
-                    padding: 0 2rem 0 0;
+                    padding-right: 2rem;
                 }
             }
         }
