--- a/sass/components/_front-page.scss
+++ b/sass/components/_front-page.scss
@@ -1,29 +1,46 @@
-@import 'abstracts/abstracts';
+@import "abstracts/abstracts";
 
+.site-main {
+  
+  .home-blog {
+
+    .home-carousel {
+      display: flex;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      margin-bottom: 1rem;
+
+      li {
+        flex: 0 0 auto;
+        margin-right: 1rem;
+      }
+    }
+  }
+}
 
 @media (min-width: 60rem) {
-    body.page-id-42 {
-        section.home-blog {
-            section.cheesecakes-container {
-                section.cheesecakes {
-                    @include page-grid-layout;
-                }
-            }
-            section.favourites-container {
-                section.favourites {
-                    @include page-grid-layout;
-                }
-            }
-            section.drinks-container {
-                section.drinks {
-                    @include page-grid-layout;
-                }
-            }
-            section.merch-container {
-                section.merch {
-                    @include page-grid-layout;
-                }
-            }
+  body.page-id-42 {
+    section.home-blog {
+      section.cheesecakes-container {
+        section.cheesecakes {
+          @include page-grid-layout;
         }
+      }
+      section.favourites-container {
+        section.favourites {
+          @include page-grid-layout;
+        }
+      }
+      section.drinks-container {
+        section.drinks {
+          @include page-grid-layout;
+        }
+      }
+      section.merch-container {
+        section.merch {
+          @include page-grid-layout;
+        }
+      }
     }
+  }
 }
