--- a/sass/components/_front-page.scss
+++ b/sass/components/_front-page.scss
@@ -16,6 +16,28 @@
       }
     }
   }
+
+  .favourites-container{
+    .favourites{
+      ul{
+        display: flex;
+        margin: 0;
+        padding: 0;
+        
+        li{
+          display: flex;
+          flex-wrap: wrap;
+          padding: 0 2rem;
+          a{
+            img{
+              max-width: 100%;
+              height: auto;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 60rem) {
