--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -1,18 +1,19 @@
 // Center block
 @mixin center-block {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 // Column width with margin
 @mixin column-width($numberColumns: 3) {
-	width: map-get($columns, $numberColumns) - ( ( $columns__margin * ( $numberColumns - 1 ) ) / $numberColumns );
+    width: map-get($columns, $numberColumns) -
+        (($columns__margin * ($numberColumns - 1)) / $numberColumns);
 }
 
 // Main grid layout
 @mixin page-grid-layout {
-	display: grid;
-	grid-template-columns: 60rem;
-	justify-content: center;
+    display: grid;
+    grid-template-columns: 60rem;
+    justify-content: center;
 }
