--- a/sass/components/_job.scss
+++ b/sass/components/_job.scss
@@ -7,6 +7,12 @@ body.post-type-archive-cafe-jobs {
         section.location {
             h2 {
                 font-family: $bungee;
+                padding-bottom: .5rem;
+                border-bottom: $coral solid 3px;
+            }
+
+            article.position-container {
+                padding-left: 2.5rem;
             }
         }
     }
