Rearrange about page content

--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -46,6 +46,7 @@ article#post-78 {
     }
 
     section.join-us-info-container {
+        background-color: $yellow;
         section.join-us-info {
             padding-bottom: 3rem;
             a.button {
