--- a/sass/plugins/woocommerce/_single-product.scss
+++ b/sass/plugins/woocommerce/_single-product.scss
@@ -1,86 +1,121 @@
-.single-product {
+@import "abstracts/abstracts";
 
-	div.product {
-		position: relative;
-
-		.woocommerce-product-gallery {
-			position: relative;
-			float: left;
-
-			.woocommerce-product-gallery__trigger {
-				position: absolute;
-				top: 2em;
-				right: 1em;
-				display: block;
-				z-index: 99;
-			}
-
-			.flex-viewport {
-				margin-bottom: 1em;
-			}
-
-			.flex-control-thumbs {
-				margin: 0;
-				padding: 0;
-
-				li {
-					list-style: none;
-					cursor: pointer;
-					float: left;
-
-					img {
-						opacity: 0.5;
-
-						&.flex-active {
-							opacity: 1;
-						}
-					}
-
-					&:hover {
-
-						img {
-							opacity: 1;
-						}
-					}
-				}
-			}
-
-			@for $i from 2 through 5 {
-
-				&.woocommerce-product-gallery--columns-#{$i} {
-
-					.flex-control-thumbs {
-
-						li {
-
-							@include column-width($i);
-
-							&:nth-child(#{$i}n) {
-								margin-right: 0;
-							}
-
-							&:nth-child(#{$i}n+1) {
-								clear: both;
-							}
-						}
-					}
-				}
-			}
-		}
-	}
+body.single-product {
+    main.site-main {
+        div.product {
+            div.woocommerce-product-gallery {
+                position: relative;
+                // max-width: 320px;
+                width: 300px;
+                margin: 0 auto;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                a.woocommerce-product-gallery__trigger {
+                    position: absolute;
+                    top: 2rem;
+                    right: 1rem;
+                    z-index: 55;
+                    display: block;
+                }
+                div.flex-viewport {
+                    width: 100%;
+                }
+                ol.flex-control-nav {
+                    margin: 0;
+                    padding: 0;
+                    display: flex;
+                    list-style: none;
+                    justify-content: center;
+                }
+            }
+            div.summary {
+            }
+            div.woocommerce-tabs {
+            }
+            h1.product_title {
+                font-size: 1.75rem;
+            }
+        }
+    }
 }
+// .single-product {
+//     div.product {
+//         position: relative;
+
+//         .woocommerce-product-gallery {
+//             position: relative;
+//             float: left;
+
+//             .woocommerce-product-gallery__trigger {
+//                 position: absolute;
+//                 top: 2em;
+//                 right: 1em;
+//                 display: block;
+//                 z-index: 99;
+//             }
+
+//             .flex-viewport {
+//                 margin-bottom: 1em;
+//             }
+
+//             .flex-control-thumbs {
+//                 margin: 0;
+//                 padding: 0;
+
+//                 li {
+//                     list-style: none;
+//                     cursor: pointer;
+//                     float: left;
+
+//                     img {
+//                         opacity: 0.5;
+
+//                         &.flex-active {
+//                             opacity: 1;
+//                         }
+//                     }
+
+//                     &:hover {
+//                         img {
+//                             opacity: 1;
+//                         }
+//                     }
+//                 }
+//             }
+
+//             @for $i from 2 through 5 {
+//                 &.woocommerce-product-gallery--columns-#{$i} {
+//                     .flex-control-thumbs {
+//                         li {
+//                             @include column-width($i);
+
+//                             &:nth-child(#{$i}n) {
+//                                 margin-right: 0;
+//                             }
+
+//                             &:nth-child(#{$i}n + 1) {
+//                                 clear: both;
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
 
 .stock {
+    &:empty::before {
+        display: none;
+    }
 
-	&:empty::before {
-		display: none;
-	}
+    &.in-stock {
+        color: $woocommerce__color-success;
+    }
 
-	&.in-stock {
-		color: $woocommerce__color-success;
-	}
-
-	&.out-of-stock {
-		color: $woocommerce__color-error;
-	}
+    &.out-of-stock {
+        color: $woocommerce__color-error;
+    }
 }
