--- a/sass/components/_front-page.scss
+++ b/sass/components/_front-page.scss
@@ -108,6 +108,53 @@ section.drinks-container {
   }
 }
 
+section.merch-container {
+  margin: 5rem 0;
+  section.merch {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    text-align: center;
+
+    h3 {
+      text-align: center;
+      width: 100%;
+      height: 3rem;
+    }
+
+    a {
+      width: 100%;
+    }
+
+    .single-merch {
+      width: 40%;
+      a {
+        img {
+          height: 200px;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 48rem){
+  section.merch-container {
+    section.merch {
+      .single-merch {
+        width: 18%;
+        a {
+          img {
+            height: 200px;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (min-width: 60rem) {
   body.page-id-42 {
     section.home-blog {
@@ -131,7 +178,7 @@ section.drinks-container {
 
     section.merch-container {
       section.merch {
-        @include page-grid-layout;
+        // @include page-grid-layout;
       }
     }
   }
