--- a/sass/components/_front-page.scss
+++ b/sass/components/_front-page.scss
@@ -2,17 +2,13 @@
 
 .site-main {
   .home-blog {
-    .home-carousel {
+    .ul {
       display: flex;
       flex-wrap: nowrap;
       overflow-x: auto;
       max-width: 100vw;
       overflow: hidden;
-      margin-bottom: 1rem;
-
-      .owl-controls {
-        display: none;
-      }
+      margin: 0;
 
       li {
         flex: 0 0 auto;
