--- a/sass/plugins/woocommerce/_single-product.scss
+++ b/sass/plugins/woocommerce/_single-product.scss
@@ -2,6 +2,10 @@
 
 body.single-product {
     main.site-main {
+        nav.woocommerce-breadcrumb {
+            text-align: left;
+            margin: 0 0 2rem 2rem;
+        }
         div.product {
             div.woocommerce-product-gallery {
                 position: relative;
@@ -12,6 +16,13 @@ body.single-product {
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                figure {
+                    div {
+                        img {
+                            display: block;
+                        }
+                    }
+                }
                 a.woocommerce-product-gallery__trigger {
                     position: absolute;
                     top: 2rem;
@@ -28,6 +39,9 @@ body.single-product {
                     display: flex;
                     list-style: none;
                     justify-content: center;
+                    li {
+                        cursor: pointer;
+                    }
                 }
             }
             div.summary {
@@ -88,6 +102,11 @@ body.single-product {
             div.woocommerce-Tabs-panel {
                 width: 80%;
                 margin-top: 0;
+            }
+            section.related {
+                img {
+                    border: 2px solid $blue;
+                }
             }
             h1.product_title {
                 font-size: 1.75rem;
@@ -275,7 +294,13 @@ body.single-product {
                     width: 80%;
                 }
                 h1.product_title {
-                    font-size: 1.75rem;
+                    font-size: 2rem;
+                }
+                h2 {
+                    font-size: 1.6rem;
+                }
+                h2.woocommerce-loop-product__title {
+                    font-size: 1.3rem;
                 }
             }
         }
