Removed padding from woocommerce h1

--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -12,6 +12,10 @@ main.site-main {
         padding-top: 2rem;
     }
 
+    h1.woocommerce-products-header__title {
+        padding-top: 0;
+    }
+
     section {
         // padding: 1rem;
     }
