--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -5,15 +5,12 @@ main.site-main {
     font-family: $roboto;
     color: $text-color;
     text-align: center;
+    padding-top: 1rem;
 
     h1 {
         font-family: $abril;
         font-size: 3rem;
-        padding-top: 2rem;
-    }
-
-    h1.woocommerce-products-header__title {
-        padding-top: 0;
+        margin-top: 0;
     }
 
     section {
