--- a/sass/components/_catering.scss
+++ b/sass/components/_catering.scss
@@ -10,7 +10,8 @@ body.page-id-69 {
 
             article.catering-options {
                 max-width: 18rem;
-                margin: 0 1.5rem;
+                margin: 0 1rem 1rem 1rem;
+                
 
                 p {
                     margin-bottom: 0;
@@ -23,8 +24,9 @@ body.page-id-69 {
         margin: 0 0 2rem 0;
         section.faq {
             h2 {
-                margin: 0 0 2rem 0;
+                padding: 2rem 0 1rem 0;
                 font-size: 2rem;
+                border-top: $text-color solid 2px;
             }
             article.individual-faq-container {
                 text-align: left; 
@@ -47,13 +49,30 @@ body.page-id-69 {
     }
 
     section.catering-form-container {
-        background-color: $yellow;
+        background-color: $coral;
+        color: $bg-color;
         section.catering-form {
             text-align: left;
 
             h2 {
                 text-align: center;
             }
+
+            button {
+                background-color: $bg-color;
+                border: $text-color solid 3px;
+                color: $text-color;
+            }
+        }
+    }
+
+    section.image-container {
+        padding-bottom: 1rem;
+        img {
+            width: 61rem;
+            height: 18rem;
+            object-fit: cover;
+            border-radius: 20px 20px;
         }
     }
 
@@ -67,6 +86,10 @@ body.page-id-69 {
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-between;
+                padding-bottom: 0;
+                section.catering-options{
+                    margin-bottom: 0;
+                }
             }
         }
         section.faq-container {
