Fixed menu tab btn padding

--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -15,6 +15,7 @@ body.page-id-67 {
                     border: 4px solid $coral;
                     margin-bottom: 0.25rem;
                     border-radius: 20px;
+                    padding: 0.5rem 1.25rem;
                 }
                 button.menu-tab-btn.current-menu-tab {
                     border: 4px solid $blue;
