Done Merch and Updated placeholder colours

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -21,6 +21,7 @@ $color__border-abbr: #666;
 
 $bg-color: #fbf7ee;
 $text-color: #545454;
+$text-color-light: #fbf7ee; 
 $yellow: #FFD399;
 $coral: #F1876B;
 $blue: #BED0D3;
