--- a/sass/components/_front-page.scss
+++ b/sass/components/_front-page.scss
@@ -167,8 +167,8 @@ section.drinks-container {
           text-decoration: none;
           color: $text-color;
           transition: 0.3s ease;
-          
-          &:hover{
+
+          &:hover {
             color: $coral;
           }
           img {
@@ -218,31 +218,57 @@ section.drinks-container {
 }
 
 section.merch-container {
-  margin: 5rem 0;
+  margin: 3rem 0;
+  background-color: $color__background-body;
   section.merch {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    text-align: center;
-
     h3 {
       text-align: center;
       width: 100%;
-      height: 3rem;
+      height: 4rem;
     }
 
-    a {
-      width: 100%;
-    }
+    .single-merch-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      text-align: center;
 
-    .single-merch {
-      width: 40%;
-      a {
-        img {
-          height: 200px;
-          object-fit: cover;
+      .single-merch {
+        width: 40%;
+        a {
+          text-decoration: none;
+
+          img {
+            border-radius: 10px;
+            height: 200px;
+            object-fit: cover;
+          }
+          h3 {
+            color: $text-color;
+            transition: 0.3s ease;
+
+            &:hover {
+              color: $coral;
+            }
+          }
         }
+      }
+    }
+
+    .button {
+      display: inline-block;
+      border: 2px solid $coral;
+      border-radius: 25px 25px;
+      margin: 3rem 0;
+      padding: 0.5rem 1.5rem;
+      transition: 0.3s ease;
+      color: $coral;
+      text-decoration: none;
+
+      &:hover {
+        background-color: $coral;
+        color: $bg-color;
       }
     }
   }
@@ -251,6 +277,10 @@ section.merch-container {
 @media screen and (min-width: 48rem) {
   section.merch-container {
     section.merch {
+      h3 {
+        height: 2rem;
+      }
+
       .single-merch {
         width: 18%;
         a {
